--- a/.github/workflows/test-aws-param-to-env.yml
+++ b/.github/workflows/test-aws-param-to-env.yml
@@ -1,5 +1,5 @@
 # Controls when the action will run. Triggers the workflow after a git push.
-on: push
+on: [push]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
