Fixing test workflow parameter declarations.

--- a/.github/workflows/test-aws-param-to-env.yml
+++ b/.github/workflows/test-aws-param-to-env.yml
@@ -30,7 +30,8 @@ jobs:
         uses: ./actions/aws-param-to-env
         id: AWSParamTest
         with:
-          param-store-base-paths: /test
+          param-store-base-paths: '/test'
+          decrypt-secure-strings: 'true'
 
       - name: Test GITHUB environment variables
         run: echo ${{ env.API_KEY }}
