--- a/.github/workflows/test-aws-param-to-env.yml
+++ b/.github/workflows/test-aws-param-to-env.yml
@@ -30,5 +30,7 @@ jobs:
           param-store-base-paths: '/test'
           decrypt-secure-strings: 'true'
 
+      # Test the outcome in the GITHUB env.
+      # Be careful with this, as the values will end up in your Action logs.
       - name: Test GITHUB environment variables
         run: echo ${{ env.API_KEY }}
