--- a/.github/workflows/test-aws-param-to-env.yml
+++ b/.github/workflows/test-aws-param-to-env.yml
@@ -3,6 +3,10 @@ on:
   workflow_dispatch:
   push:
 
+permissions:
+  contents: read
+  id-token: write
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
