--- a/.github/workflows/test-aws-param-to-env.yml
+++ b/.github/workflows/test-aws-param-to-env.yml
@@ -34,10 +34,10 @@ jobs:
         # uses: ./actions/aws-param-to-env
         id: AWSParamTest
         with:
-          param-store-base-paths: /test
-          decrypt-secure-strings: true
-          debug-logging: true
-          mask-values: true
+          param_store_base_paths: /test
+          decrypt_secure_strings: true
+          debug_logging: true
+          mask_values: true
 
       # Test the outcome in the GITHUB env.
       # Be careful with this, as the values will end up in your Action logs.
