US130221 - Update rally-check to fire on pull_request synchronize activity

--- a/.github/workflows/rally-checks.yml
+++ b/.github/workflows/rally-checks.yml
@@ -6,6 +6,7 @@ on:
       - reopened
       - edited
       - synchronize
+      - synchronize
 jobs:
   check-rally-integration:
     name: check-rally-artifact
