--- a/opslevel.yml
+++ b/opslevel.yml
@@ -7,9 +7,11 @@ service:
   product: Dops GitHub Acctions
   owner: rise
   system: rise_backend
-  language: Node.js
+  language: Javascript
+  framework: Node.js
   description:
   aliases:
+    - dops-github-actions
   tags:
     - key: dependencies
       value: exempt
