US128578 - updated additional alias

--- a/opslevel.yml
+++ b/opslevel.yml
@@ -12,6 +12,7 @@ service:
   description:
   aliases:
     - dops-github-actions
+    - dops_github_actions
   tags:
     - key: dependencies
       value: exempt
