US141123 - Included Rally Milestone check

--- a/.github/workflows/rally-checks.yml
+++ b/.github/workflows/rally-checks.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   check-rally-integration:
     name: check-rally-artifact
-    uses: RepublicServicesRepository/dops-gha-rally-integration/.github/workflows/workflow.yml@v1.0.0
+    uses: RepublicServicesRepository/dops-gha-rally-integration/.github/workflows/workflow.yml@v2.0.0
     secrets:
       github_pat: ${{ secrets.REPUBLIC_SYSTEM_RISE_PAT }}
       rally_api_key: ${{secrets.RALLY_API_KEY}}
+    with:
+        check_milestone: "true"
